* ext/dbm/dbm.c (Init_dbm): fix a build error on mswin32.   use `extern __declspec(dllimport)` for dll link with VC.   [ruby-core:41996] [Bug #5869]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34265 b2dd03c8-39d4-4d8f-98ff-823fe69b080e